# dictIO

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.html  MANIFEST.in  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  api.html  cli.__main__.html  cli.dictParser.html  cli.dict_parser.html  cli.html  dictIO.cppDict.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.dictWriter.html  dictIO.formatter.html  dictIO.html  dictIO.parser.html  dictIO.utils.counter.html  dictIO.utils.html  dictIO.utils.logging.html  dictIO.utils.path.html  dictIO.utils.strings.html  fileFormat.cppDict.html  fileFormat.html  fileFormat.sDict.html  genindex.html  index.html  modules.txt  names.csv  (+15 more)
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _merge_into_release.yml  _publish_package.yml  _test.yml  _test_future.yml  black.yml  code_quality.yml  main.yml  publish_release.yml  pypi.yml  sphinx.yml  test.pypi.yml  tox.yml
_autosummary/: dictIO.cpp_dict.CppDict.html  dictIO.cpp_dict.html  dictIO.dict.SDict.html  dictIO.dict.html  dictIO.dict_parser.DictParser.html  dictIO.dict_parser.html  dictIO.dict_reader.DictReader.html  dictIO.dict_reader.html  dictIO.dict_writer.DictWriter.html  dictIO.dict_writer.html  dictIO.formatter.FoamFormatter.html  dictIO.formatter.Formatter.html  dictIO.formatter.JsonFormatter.html  dictIO.formatter.NativeFormatter.html  dictIO.formatter.XmlFormatter.html  dictIO.formatter.html  dictIO.parser.FoamParser.html  dictIO.parser.JsonParser.html  dictIO.parser.NativeParser.html  dictIO.parser.Parser.html  dictIO.parser.XmlParser.html  dictIO.parser.html  dictIO.types.html  dictIO.utils.counter.BorgCounter.html  dictIO.utils.counter.DejaVue.html  dictIO.utils.counter.Indenter.html  dictIO.utils.counter.html  dictIO.utils.dict.html  dictIO.utils.html  dictIO.utils.logging.html  dictIO.utils.path.html  dictIO.utils.strings.html
_sources/: api.rst.txt  cli.dict_parser.rst.txt  dictIO.rst.txt  dictIO.utils.logging.rst.txt  fileFormat.rst.txt
_sources/_autosummary/: dictIO.cpp_dict.CppDict.rst.txt  dictIO.cpp_dict.rst.txt  dictIO.dict.rst.txt  dictIO.dict_parser.rst.txt  dictIO.dict_reader.DictReader.rst.txt  dictIO.dict_reader.rst.txt  dictIO.formatter.FoamFormatter.rst.txt  dictIO.formatter.NativeFormatter.rst.txt  dictIO.formatter.XmlFormatter.rst.txt  dictIO.formatter.rst.txt  dictIO.parser.FoamParser.rst.txt  dictIO.parser.Parser.rst.txt  dictIO.parser.rst.txt  dictIO.types.rst.txt  dictIO.utils.counter.BorgCounter.rst.txt  dictIO.utils.counter.DejaVue.rst.txt  dictIO.utils.counter.Indenter.rst.txt  dictIO.utils.logging.rst.txt  dictIO.utils.strings.rst.txt
branch/include_directives_without_hash/: .buildinfo  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.dictParser.html  cli.html  dictIO.cppDict.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.dictWriter.html  dictIO.formatter.html  dictIO.html  dictIO.parser.html  fileFormat.cppDict.html  fileFormat.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.__main__.html  cli.dictParser.html  cli.dict_parser.html  cli.html  dictIO.cppDict.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.dictWriter.html  dictIO.formatter.html  dictIO.html  dictIO.parser.html  dictIO.utils.counter.html  dictIO.utils.html  dictIO.utils.logging.html  dictIO.utils.path.html  dictIO.utils.strings.html  fileFormat.cppDict.html  fileFormat.html  fileFormat.sDict.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
branch/quotes4subfiltering/: cli.dictParser.html  cli.html  dictIO.cppDict.html  dictIO.dictWriter.html  dictIO.html  searchindex.js
branch/quotes4subfiltering_review/: .buildinfo  LICENSE.html  README.html  STYLEGUIDE.html  api.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.formatter.html  dictIO.parser.html  fileFormat.cppDict.html  fileFormat.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
branch/release/: .buildinfo  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.dictParser.html  cli.html  dictIO.cppDict.html  dictIO.dictParser.html  dictIO.dictReader.html  dictIO.dictWriter.html  dictIO.formatter.html  dictIO.html  dictIO.parser.html  fileFormat.cppDict.html  fileFormat.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/: make.bat
docs/source/: api.rst  cli.dictParser.rst  cli.rst  conf.py  dictIO.cli.rst  dictIO.dict.rst  dictIO.dictParser.rst  dictIO.rst  dictIO.utils.counter.rst  dictIO.utils.dict.rst  dictIO.utils.path.rst  dictIO.utils.rst  dictIO.utils.strings.rst  example.dict.md  example.paramDict.md  examples.rst  fileFormat.cppDict.md  fileFormat.rst  fileFormat.sDict.md  index.rst  modules.rst
src/dictIO/: __init__.py  collections.py  cppDict.py  cpp_dict.py  dict.py  dictParser.py  dictReader.py  dictWriter.py  dict_parser.py  dict_reader.py  dict_writer.py  formatter.py  parser.py  types.py
tests/: .gitignore  conftest.py  paramDict  test_OspSystemStructure.xml  test_configDict  test_configDict.xml  test_cpp_dict.py  test_cppdict.py  test_demoCaseDict  test_demoCaseDict_paramDict  test_dict  test_dict.py  test_dictParser.py  test_dictParser_dict  test_dictReader.py  test_dictReader_dict  test_dictReader_foam  test_dictWriter.py  test_dict_dict  test_dict_parser.py  test_dict_reader.py  test_dict_writer.py  test_exprsDict  test_farnParamDict  test_foamDict  test_formatter.py  test_formatter_dict  test_generic.xml  test_mergeDict  test_orderDict  test_paramDict  test_parser.py  test_parser_dict  test_parser_xml.xml  test_sdict.py  test_simpleDict  test_simpleParamDict  test_writeDict
tests/cli/: test_dictParser_cli.py
tests/include/: initialConditions
tests/test_dicts/: paramDict  test_dictParser_dict  test_dictReader_dict  (+19 more)
(+109 files in other folders)
