[metadata]
name = dictIO
version = 0.0.13
summary = Read, write and manipulate dictionary text files.
description = Python package to read, write and manipulate dictionary text files. Supports dictIOs dict file format, as well as JSON, XML and OpenFOAM.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://turbo-adventure-f218cdea.pages.github.io
project_urls =
    GitHub = https://github.com/dnv-opensource/dictIO
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    # Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Frank Lumpitzsch
author_email = "Frank Lumpitzsch" <frank.lumpitzsch@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9, <3.10
install_requires =
    lxml>=4.6.4
    jsonschema>=4.2.1

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    dictParser = dictIO.cli.dictParser:main

[flake8]
ignore = E116, E117, E123, E126, E226, E133, E251, E501, E701, W503
ignore-names = test_*, setUp, tearDown

[yapf]
based_on_style = pep8
indent_width = 4
column_limit = 99
blank_lines_between_top_level_imports_and_variables = 2
blank_line_before_nested_class_or_def = true
spaces_before_comment = 5, 9, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49, 53, 57, 61, 65, 69, 73, 77, 81, 85, 89, 93, 97, 101, 105, 109, 113, 117, 121
dedent_closing_brackets = true
#spaces_around_default_or_named_assign = true
split_all_top_level_comma_separated_values = true
split_before_bitwise_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = true
split_complex_comprehension = true
