[metadata]
name = dictIO
version = 0.3.0
summary = Read, write and manipulate dictionary text files.
description = Python package to read, write and manipulate dictionary text files. Supports dictIOs dict file format, as well as JSON, XML and OpenFOAM.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dnv-opensource.github.io/dictIO/README.html
project_urls =
    GitHub = https://github.com/dnv-opensource/dictIO
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Frank Lumpitzsch
author_email = "Frank Lumpitzsch" <frank.lumpitzsch@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    lxml>=4.9
    jsonschema>=4.20
    numpy>=1.26

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    dictParser = dictIO.cli.dictParser:main

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True

[coverage:run]
source = dictIO
branch = True

[coverage:report]
fail_under = 80.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/dictIO
    */site-packages/dictIO

[tox:tox]
isolated_build = True
envlist = py{39,310,311,312}-{linux,macos,windows}
# envlist = py{39,310,311,312}-{windows}
# envlist = py{39,310,311,312}

[testenv]
system_site_packages = True
deps =
    pytest>=7.4
    pytest-cov>=4.1
    pytest-randomly>=3.15
commands =
    pytest --cov --cov-config setup.cfg {posargs}
